--- a/landing-c/index.html
+++ b/landing-c/index.html
@@ -275,9 +275,9 @@ a{ color:inherit; }
 </script>
 <script src="/assets/js/88st-analytics.js"></script>
 <script defer="" src="/assets/js/vendor-teasers.js"></script>
-<link href="/assets/vendor-teasers.css" rel="stylesheet"/>
-<link href="/assets/88st-theme.css?v=20260210_3" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260210_3"></script>
+<link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
 </head>
 <body>
 <div class="notice">
