--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -13,7 +13,7 @@
 <meta content="켈리(Kelly) 비중 계산기" property="og:title"/>
 <meta content="배당+확률로 Kelly 비중을 계산(보수적 옵션/캡 지원)." property="og:description"/>
 <meta content="https://88st.cloud/tool/kelly/" property="og:url"/>
-<link href="/assets/vendor-teasers.css" rel="stylesheet"/>
+<link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
 <style>
 :root{
   --accent1:#5fb2ff; --accent2:#a8dcff; --accentRGB:95,178,255;
@@ -57,8 +57,8 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"켈리 기준은 무엇인가요?","acceptedAnswer":{"@type":"Answer","text":"켈리 기준은 장기 로그성장률을 최대화하는 베팅 비중을 산출하는 방법입니다. 변동성이 커서 보수적(1/2, 1/4 Kelly)으로 쓰는 경우가 많습니다."}},{"@type":"Question","name":"확률이 정확하지 않으면 어떻게 되나요?","acceptedAnswer":{"@type":"Answer","text":"내 예상 확률이 과대평가되면 권장 비중이 과도해질 수 있습니다. 보수 계수(예: 1/4 Kelly)와 최대 비중 캡을 함께 사용하는 것을 권장합니다."}},{"@type":"Question","name":"켈리가 0% 이하로 나오면?","acceptedAnswer":{"@type":"Answer","text":"해당 입력 조건에서는 기대값이 음수로 해석될 수 있어 비중 0%가 권장됩니다."}},{"@type":"Question","name":"이 도구는 투자/배팅 조언인가요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 본 도구는 판단 보조용 계산기이며, 결과/수익을 보장하지 않습니다."}}]}</script>
 <script src="/assets/js/88st-analytics.js"></script>
 <script defer="" src="/assets/js/vendor-teasers.js"></script>
-<link href="/assets/88st-theme.css?v=20260210_3" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260210_3"></script>
+<link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
 </head>
 <body>
 <div class="wrap">
