--- a/tool-odds/index.html
+++ b/tool-odds/index.html
@@ -218,6 +218,8 @@ a{ color:inherit; }
 <script defer="" src="/assets/js/vendor-teasers.js"></script>
 <link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
 <link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=20260210_5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-tool-history.js?v=20260210_5"></script>
 <script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
 </head>
 <body>
@@ -300,6 +302,30 @@ document.getElementById("odds").addEventListener("input", toProb);
 document.getElementById("prob").addEventListener("input", toOdds);
 toProb(); toOdds();
 </script>
+
+<!-- Tool share/history config (auto UI injection) -->
+<script type="application/json" id="__88stToolConfig">
+{
+  "tool": "odds",
+  "title": "배당↔확률 변환",
+  "inputs": ["odds", "prob"],
+  "outputs": {
+    "probOut": "#probOut",
+    "beOut": "#beOut",
+    "oddsOut": "#oddsOut",
+    "noteOut": "#noteOut"
+  },
+  "shareParams": {
+    "odds": "o",
+    "prob": "p"
+  },
+  "examples": [
+    {"label": "배당 예시", "values": {"odds": "2.05"}},
+    {"label": "확률 예시", "values": {"prob": "58"}}
+  ]
+}
+</script>
+
 <div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
 <div class="vt-head">
 <div>
