--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1833,7 +1833,11 @@ const INSIGHTS_BY_SPORT = {
 <script src="/assets/js/88st-analytics.js"></script>
 <link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
 <script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
-</meta></head>
+</meta><link href="/assets/88st-tool-history.css?v=20260210_B1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B1"></script>
+<link href="/assets/88st-shell.css?v=20260210_B1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B1"></script>
+</head>
 <body>
 <div class="notice-bar">
 <a href="https://t.me/UZU59" id="noticeLink" rel="noopener" target="_blank">
