--- a/tool/fair-odds/index.html
+++ b/tool/fair-odds/index.html
@@ -114,7 +114,7 @@ footer{ margin-top:16px; color:var(--muted-2); font-size:12px; line-height:1.6; 
 
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "오버라운드(마진)가 몇 %면 높은 편인가요?", "acceptedAnswer": {"@type": "Answer", "text": "종목/리그/시장에 따라 다르지만, 일반적으로 마진이 낮을수록 유리합니다. 같은 조건이면 2~4%대가 6~10%대보다 장기 기대값이 좋습니다."}}, {"@type": "Question", "name": "공정확률/공정배당은 무엇인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시확률을 100%로 정규화해 마진을 제거한 값입니다. ‘마진이 없는 시장’이라고 가정한 공정 기준으로 비교할 때 사용합니다."}}, {"@type": "Question", "name": "2-way와 3-way는 언제 쓰나요?", "acceptedAnswer": {"@type": "Answer", "text": "승/패만 있는 시장은 2-way, 승/무/패가 있는 시장은 3-way로 계산합니다."}}, {"@type": "Question", "name": "마진이 낮으면 무조건 좋은 배팅인가요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. 마진은 ‘수수료’에 가깝고, 실제 수익 여부는 추정 승률(엣지)과 배당의 균형(EV)에 달려 있습니다."}}, {"@type": "Question", "name": "이 계산기는 정답인가요?", "acceptedAnswer": {"@type": "Answer", "text": "계산 자체는 산술이지만, 실제 결과는 변동성이 큽니다. 참고용으로만 활용해 주세요."}}]}</script>
-<script defer="" src="../assets/theme-preset.js"></script>
+<script defer="" src="/assets/theme-preset.js"></script>
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
 :root{
@@ -219,6 +219,11 @@ a{ color:inherit; }
 <link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
 <link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
 <script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
+<link href="/assets/88st-tool-history.css?v=20260210_B1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B1"></script>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B1"></script>
+<link href="/assets/88st-shell.css?v=20260210_B1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B1"></script>
 </head>
 <body>
 <div class="wrap">
@@ -326,6 +331,30 @@ document.getElementById("resetBtn").addEventListener("click", ()=>{
 ["o1","o2","o3"].forEach(id=> document.getElementById(id).addEventListener("input", ()=> calc()));
 sync(); calc();
 </script>
+<script type="application/json" id="__88stToolConfig">
+{
+  "tool": "margin",
+  "title": "마진 계산기",
+  "inputs": ["mode", "o1", "o2", "o3"],
+  "outputs": {
+    "sumImp": "#sumImp",
+    "margin": "#margin",
+    "fairProb": "#fairProb",
+    "fairOdds": "#fairOdds"
+  },
+  "shareParams": {
+    "mode": "m",
+    "o1": "a",
+    "o2": "b",
+    "o3": "c"
+  },
+  "examples": [
+    {"label": "2-way 예시", "values": {"mode": "2", "o1": "1.95", "o2": "1.95"}},
+    {"label": "3-way 예시", "values": {"mode": "3", "o1": "2.10", "o2": "3.40", "o3": "3.60"}}
+  ]
+}
+</script>
+
 <div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
 <div class="vt-head">
 <div>
