--- a/landing-e/index.html
+++ b/landing-e/index.html
@@ -127,12 +127,12 @@
 <body>
   <div class="st-landing-wrap">
     <!-- 전체 이미지 클릭 시: 분석기 이동 (원하면 링크만 바꾸면 됨) -->
-    <a class="st-landing-cover" href="/analysis/" aria-label="클릭하면 분석기로 이동">
-      <img src="/img/img10.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
+    <a class="st-landing-cover" href="http://spd-7575.com/?code=88ST"> aria-label="클릭하면 사이트로 이동">
+      <img src="/img/img99.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
-        <p class="t">클릭하면 분석기로 이동</p>
-        <p class="d">마진 · EV · Kelly · 라인별 마진까지 한 번에 확인하고 기록까지 저장하세요.</p>
+        <p class="t">클릭하면 사이트로 이동</p>
+        <p class="d">코드 자동 입력</p>
         <div class="st-landing-pill">⚡ 빠른 시작</div>
       </div>
     </a>
