--- a/landing-e/index.html
+++ b/landing-e/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>88ST.CLOUD | 랜딩 E</title>
-  <meta name="description" content="클릭 한 번으로 분석기/계산기로 이동하는 88ST.CLOUD 랜딩 페이지."/>
+  <title>88ST.CLOUD | 고액전용 / 스피드 / 먹튀없는 안전한 놀이터 </title>
+  <meta name="description" content="클릭 한 번으로 사이트로로 이동하는 88ST.CLOUD 랜딩 페이지."/>
   <link rel="canonical" href="https://88st.cloud/landing-e/"/>
   <meta name="robots" content="index,follow"/>
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
