--- a/landing-f/index.html
+++ b/landing-f/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>88ST.CLOUD | 랜딩 F</title>
-  <meta name="description" content="클릭 한 번으로 계산기(마진/EV)로 이동하는 88ST.CLOUD 랜딩 페이지."/>
+  <title>88ST.CLOUD | 고액전용/오케이/먹튀없는메이저사이트</title>
+  <meta name="description" content="클릭 한 번으로 오케이벳 으로 이동하는 88ST.CLOUD 랜딩 페이지."/>
   <link rel="canonical" href="https://88st.cloud/landing-f/"/>
   <meta name="robots" content="index,follow"/>
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
@@ -83,14 +83,14 @@
 </head>
 <body>
   <div class="st-landing-wrap">
-    <!-- 전체 이미지 클릭 시: 마진 계산기로 이동 (원하면 링크만 바꾸면 됨) -->
-    <a class="st-landing-cover" href="/tool-margin/" aria-label="클릭하면 마진 계산기로 이동">
-      <img src="/img/img11.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
+    <!-- 전체 이미지 클릭 시: 오케이벳 (코드 자동 기입) (원하면 링크만 바꾸면 됨) -->
+    <a class="st-landing-cover" href="http://ok-8888.com/?code=88ST" aria-label="클릭하면 OK Bet 이동">
+      <img src="/img/img98.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
-        <p class="t">클릭하면 마진 계산기로 이동</p>
-        <p class="d">라인/마켓별 오버라운드부터 공정확률·공정배당까지 빠르게 정리합니다.</p>
-        <div class="st-landing-pill">📌 마진 체크</div>
+        <p class="t">클릭하면 사이트로 이동</p>
+        <p class="d">가입 코드 자동 입력 </p>
+        <div class="st-landing-pill">📌코드:88ST</div>
       </div>
     </a>
   </div>
