--- a/landing-e/index.html
+++ b/landing-e/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>88ST.CLOUD | 고액전용 / 스피드 / 먹튀없는 안전한 놀이터 </title>
-  <meta name="description" content="클릭 한 번으로 사이트로로 이동하는 88ST.CLOUD 랜딩 페이지."/>
+  <title>88ST.CLOUD | 고액전용 / 스피드 / 먹튀없는 안전 메이저사이트 SPEEDbet </title>
+  <meta name="description" content="클릭 한 번으로 스피드로 이동하는 88ST.CLOUD 랜딩 페이지."/>
   <link rel="canonical" href="https://88st.cloud/landing-e/"/>
   <meta name="robots" content="index,follow"/>
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
@@ -126,14 +126,14 @@
 </head>
 <body>
   <div class="st-landing-wrap">
-    <!-- 전체 이미지 클릭 시: 분석기 이동 (원하면 링크만 바꾸면 됨) -->
+    <!-- 전체 이미지 클릭 시: 스피드벳 코드 자동 기입 (원하면 링크만 바꾸면 됨) -->
     <a class="st-landing-cover" href="http://spd-7575.com/?code=88ST"> aria-label="클릭하면 사이트로 이동">
       <img src="/img/img99.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
         <p class="t">클릭하면 사이트로 이동</p>
         <p class="d">코드 자동 입력</p>
-        <div class="st-landing-pill">⚡ 빠른 시작</div>
+        <div class="st-landing-pill">⚡ 코드:88ST</div>
       </div>
     </a>
   </div>
