--- a/ipl/index.html
+++ b/ipl/index.html
@@ -308,10 +308,10 @@ a{ color:inherit; }
 <script src="/assets/js/88st-analytics.js"></script>
 <link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
 <script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
-<link href="/assets/88st-tool-history.css?v=20260210_B2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B2"></script>
-<link href="/assets/88st-shell.css?v=20260210_B2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B2"></script>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
 </head>
 <body>
 <div id="loader">
@@ -347,7 +347,17 @@ a{ color:inherit; }
 <small class="muted">※ 과장 없이, 환전조건/제한을 먼저 보는 방식으로 안내합니다.</small>
 </div>
 </div>
-<div class="wrap">
+<div class="wrap st-guide" role="main">
+<div class="card st-guide-hero">
+  <div class="st-guide-kicker">88ST.CLOUD · 가이드</div>
+  <h1 class="st-guide-title">입플/보너스 가이드</h1>
+  <p class="st-guide-desc">입금플러스(입플)·보너스·페이백 조건을 “롤링/제한/환전” 중심으로 깔끔하게 정리했습니다.</p>
+  <div class="st-guide-actions">
+    <a class="btn primary" href="/analysis/">분석기</a>
+    <a class="btn secondary" href="/bonus-checklist/">입플 체크리스트</a>
+    <a class="btn ghost" href="https://t.me/UZU59" target="_blank" rel="noopener">문의</a>
+  </div>
+</div>
 <div class="grid2">
 <div class="card">
 <div class="title"><span class="badge">CHECK</span>입플/보너스 체크리스트 (핵심 6)</div>
