--- a/landing-f/index.html
+++ b/landing-f/index.html
@@ -26,13 +26,13 @@
       overflow:hidden;
       border: 1px solid rgba(255,255,255,.12);
       box-shadow: 0 22px 70px rgba(0,0,0,.55);
-      background: rgba(0,0,0,.22);
+      background: rgba(0,0,0,.10);
     }
-    .st-landing-cover img{ width:100%; height:100%; object-fit: cover; display:block; filter: saturate(1.02) contrast(1.02); }
+    .st-landing-cover img{ width:100%; height:100%; object-fit: cover; display:block; filter: brightness(1.08) contrast(1.06) saturate(1.06); }
     .st-landing-overlay{
       position:absolute; inset:0;
       background:
-        linear-gradient(180deg, rgba(0,0,0,.06) 0%, rgba(0,0,0,.22) 38%, rgba(0,0,0,.62) 100%),
+        linear-gradient(180deg, rgba(0,0,0,.04) 0%, rgba(0,0,0,.16) 38%, rgba(0,0,0,.44) 100%),
         radial-gradient(900px 420px at 20% 20%, rgba(95,178,255,.16), transparent 55%),
         radial-gradient(900px 420px at 80% 30%, rgba(120,170,255,.12), transparent 58%);
       pointer-events:none;
@@ -100,7 +100,7 @@
     텔레그램 상담문의
   </a>
 
-  <script defer src="/assets/js/88st-shell.js?v=20260210_B4"></script>
-  <script defer src="/assets/js/88st-tool-history.js?v=20260210_B4"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260210_B5"></script>
+  <script defer src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 </body>
 </html>
