--- a/minigame/index.html
+++ b/minigame/index.html
@@ -224,10 +224,10 @@ a{ color:inherit; }
 <script src="/assets/js/88st-analytics.js"></script>
 <link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
 <script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
-<link href="/assets/88st-tool-history.css?v=20260210_B2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B2"></script>
-<link href="/assets/88st-shell.css?v=20260210_B2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B2"></script>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
 </head>
 <body>
 <div id="loader">
@@ -263,7 +263,17 @@ a{ color:inherit; }
 <small class="muted">※ 과몰입/무리한 베팅은 금물 — 리스크 관리 중심 안내.</small>
 </div>
 </div>
-<div class="wrap">
+<div class="wrap st-guide" role="main">
+<div class="card st-guide-hero">
+  <div class="st-guide-kicker">88ST.CLOUD · 가이드</div>
+  <h1 class="st-guide-title">동행 미니게임 가이드</h1>
+  <p class="st-guide-desc">파워볼/키노사다리/동키노 이용 전 반드시 확인해야 할 조건·제한·환전 기준을 한 번에 정리했습니다.</p>
+  <div class="st-guide-actions">
+    <a class="btn primary" href="/analysis/">분석기</a>
+    <a class="btn secondary" href="/bonus-checklist/">입플 체크리스트</a>
+    <a class="btn ghost" href="https://t.me/UZU59" target="_blank" rel="noopener">문의</a>
+  </div>
+</div>
 <div class="grid2">
 <div class="card">
 <div class="title"><span class="badge">START</span>초보 3분 요약</div>
