--- a/slot/index.html
+++ b/slot/index.html
@@ -221,10 +221,10 @@ a{ color:inherit; }
 <script src="/assets/js/88st-analytics.js"></script>
 <link href="/assets/88st-theme.css?v=20260210_4" rel="stylesheet"/>
 <script defer="" src="/assets/88st-theme.js?v=20260210_4"></script>
-<link href="/assets/88st-tool-history.css?v=20260210_B2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B2"></script>
-<link href="/assets/88st-shell.css?v=20260210_B2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260210_B2"></script>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260210_B5"></script>
 </head>
 <body>
 <div id="loader">
@@ -260,7 +260,17 @@ a{ color:inherit; }
 <small class="muted">※ “보너스 크기”보다 “제한/환전조건”이 실사용 만족을 좌우합니다.</small>
 </div>
 </div>
-<div class="wrap">
+<div class="wrap st-guide" role="main">
+<div class="card st-guide-hero">
+  <div class="st-guide-kicker">88ST.CLOUD · 가이드</div>
+  <h1 class="st-guide-title">슬롯 가이드</h1>
+  <p class="st-guide-desc">슬롯 보너스 조건(롤링/제한/상한/환전)을 동일한 템플릿으로 정리했습니다.</p>
+  <div class="st-guide-actions">
+    <a class="btn primary" href="/analysis/">분석기</a>
+    <a class="btn secondary" href="/bonus-checklist/">입플 체크리스트</a>
+    <a class="btn ghost" href="https://t.me/UZU59" target="_blank" rel="noopener">문의</a>
+  </div>
+</div>
 <div class="grid2">
 <div class="card">
 <div class="title"><span class="badge">CHECK</span>슬롯 보너스 체크리스트 (핵심 6)</div>
