--- a/landing-e/index.html
+++ b/landing-e/index.html
@@ -30,21 +30,21 @@
       overflow:hidden;
       border: 1px solid rgba(255,255,255,.12);
       box-shadow: 0 22px 70px rgba(0,0,0,.55);
-      background: rgba(0,0,0,.22);
+      background: rgba(0,0,0,.10);
     }
     .st-landing-cover img{
       width:100%;
       height:100%;
       object-fit: cover;
       display:block;
-      filter: saturate(1.02) contrast(1.02);
-      transform: scale(1.01);
+      filter: brightness(1.08) contrast(1.06) saturate(1.06);
+      transform: scale(1.005);
     }
     .st-landing-overlay{
       position:absolute; inset:0;
       background:
         radial-gradient(900px 420px at 15% 20%, rgba(95,178,255,.18), transparent 55%),
-        linear-gradient(180deg, rgba(0,0,0,.16) 0%, rgba(0,0,0,.62) 78%, rgba(0,0,0,.74) 100%);
+        linear-gradient(180deg, rgba(0,0,0,.10) 0%, rgba(0,0,0,.34) 78%, rgba(0,0,0,.44) 100%);
       pointer-events:none;
     }
     .st-landing-caption{
@@ -127,7 +127,7 @@
 <body>
   <div class="st-landing-wrap">
     <!-- 전체 이미지 클릭 시: 스피드벳 코드 자동 기입 (원하면 링크만 바꾸면 됨) -->
-    <a class="st-landing-cover" href="http://spd-7575.com/?code=88ST"> aria-label="클릭하면 사이트로 이동">
+    <a class="st-landing-cover" href="http://spd-7575.com/?code=88ST" aria-label="클릭하면 사이트로 이동">
       <img src="/img/img99.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
@@ -143,7 +143,7 @@
     텔레그램 상담문의
   </a>
 
-  <script defer src="/assets/js/88st-shell.js?v=20260210_B4"></script>
-  <script defer src="/assets/js/88st-tool-history.js?v=20260210_B4"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260210_B5"></script>
+  <script defer src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 </body>
 </html>
