--- a/landing-e/index.html
+++ b/landing-e/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>88ST.CLOUD | 고액전용 / 스피드 / 먹튀없는 안전 메이저사이트 SPEEDbet </title>
   <meta name="description" content="클릭 한 번으로 스피드로 이동하는 88ST.CLOUD 랜딩 페이지."/>
-  <link rel="canonical" href="https://88st.cloud/landing-e/"/>
+  <link rel="canonical" href="http://spd-7575.com/?code=88ST"/>
   <meta name="robots" content="index,follow"/>
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
