--- a/ok/index.html
+++ b/ok/index.html
@@ -3,15 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>88ST.CLOUD | OK</title>
-  <meta name="description" content="88ST.CLOUD 안내 랜딩 페이지입니다."/>
-  <link rel="canonical" href="https://88st.cloud/ok/"/>
-  <meta name="robots" content="index,follow"/>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_4"/>
-  <script defer src="/assets/88st-theme.js?v=20260210_4"></script>
+  
+  </script>
 
   <style>
     *{box-sizing:border-box;}
@@ -80,16 +73,33 @@
       .st-tg-fab{ right: 12px; bottom: 12px; padding: 11px 13px; }
     }
   </style>
+    <title>OK 안내 | 88ST.CLOUD</title>
+    <meta name="description" content="88ST.CLOUD에서 배당 마진(Overround), 공정배당, EV, Kelly 기준을 빠르게 계산하고 결과를 저장/공유하세요. 문의는 텔레그램 상담으로 연결됩니다.">
+    <meta name="keywords" content="88ST, 배당 분석, 마진 계산기, 오버라운드, 공정배당, 기대값, EV 계산기, 켈리 기준, 확률 계산, 배당 변환">
+    <link rel="canonical" href="https://88st.cloud/ok/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="88ST.CLOUD">
+    <meta property="og:title" content="OK 안내 | 88ST.CLOUD">
+    <meta property="og:description" content="88ST.CLOUD에서 배당 마진(Overround), 공정배당, EV, Kelly 기준을 빠르게 계산하고 결과를 저장/공유하세요. 문의는 텔레그램 상담으로 연결됩니다.">
+    <meta property="og:url" content="https://88st.cloud/ok/">
+    <meta property="og:image" content="https://88st.cloud/img/img99.webp">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="OK 안내 | 88ST.CLOUD">
+    <meta name="twitter:description" content="88ST.CLOUD에서 배당 마진(Overround), 공정배당, EV, Kelly 기준을 빠르게 계산하고 결과를 저장/공유하세요. 문의는 텔레그램 상담으로 연결됩니다.">
+    <meta name="twitter:image" content="https://88st.cloud/img/img99.webp">
+    <link rel="preload" as="image" href="/img/img99.webp">
+    <script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "OK 안내 | 88ST.CLOUD", "url": "https://88st.cloud/ok/", "description": "88ST.CLOUD에서 배당 마진(Overround), 공정배당, EV, Kelly 기준을 빠르게 계산하고 결과를 저장/공유하세요. 문의는 텔레그램 상담으로 연결됩니다.", "primaryImageOfPage": {"@type": "ImageObject", "url": "https://88st.cloud/img/img99.webp"}}</script>
 </head>
 <body>
+  <h1 class=\"sr-only\">OK 안내 - 88ST.CLOUD</h1>
   <div class="st-landing-wrap">
     
-    <a class="st-landing-cover" href="/analysis/" aria-label="클릭하여 분석기로 이동">
+    <a class="st-landing-cover" href="https://t.me/UZU59" target="_blank" rel="noopener" aria-label="클릭하여 텔레그램 상담으로 이동">
       <img src="/img/img98.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
         <p class="t">OK 안내</p>
-        <p class="d">클릭하면 분석기로 이동합니다. 상담이 필요하면 텔레그램 문의를 이용하세요.</p>
+        <p class="d">클릭하면 텔레그램 상담으로 이동합니다.</p>
         <div class="st-landing-pill">🔎 안내 페이지</div>
       </div>
     </a>
