--- a/ok/index.html
+++ b/ok/index.html
@@ -94,7 +94,7 @@
   <h1 class=\"sr-only\">OK 안내 - 88ST.CLOUD</h1>
   <div class="st-landing-wrap">
     
-    <a class="st-landing-cover" href="http://ok-8888.com/?code=88ST" target="_blank" rel="noopener" aria-label="클릭 OK 바로 이동">
+    <a class="st-landing-cover" href="https://t.me/UZU59" target="_blank" rel="noopener" aria-label="클릭하여 텔레그램 상담으로 이동">
       <img src="/img/img98.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
       <div class="st-landing-caption" aria-hidden="true">
@@ -110,7 +110,7 @@
     텔레그램 상담문의
   </a>
 
-  <script defer src="/assets/js/88st-shell.js?v=20260210_B5"></script>
-  <script defer src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260210_B6"></script>
+  <script defer src="/assets/js/88st-tool-history.js?v=20260210_B6"></script>
 </body>
 </html>
